[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "recboletutorial"
version = "0.1.0"
description = ""
authors = [
    "Vladimir Ilievski <ilievski.vladimir@live.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
torch = {version = "1.12.0", extras = ["cu120"]}
recbole = {version = "^1.1.1", extras = ["ray"]}
numpy="1.19.5"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.2"
ruff = "^0.0.239"
invoke = "^2.0.0"
rich = "^13.3.2"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B008", "B905", "C901"]

[tool.ruff.isort]
known-first-party = ["recboletutorial"]

